5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1712_2502.log
== TEST (2019-05-13 22:31:49) 
-- CODE:
n= int(input())
c=0
d=1
e=0
aux=1

while(c<n):
	e=e+(aux * (1 / (d*(3**c))))
	if(aux==1):
		aux= -1
	else:
		aux = 1
	c = c+1
	d = d+2
e = e * sqrt(12)
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    e = e * sqrt(12)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:32:08) 
-- CODE:
n= int(input())
c=0
d=1
e=0
aux=1

while(c<n):
	e=e+(aux * (1 / (d*(3**c))))
	if(aux==1):
		aux= -1
	else:
		aux = 1
	c = c+1
	d = d+2
e = e * sqrt(12)
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    e = e * sqrt(12)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:32:28) 
-- CODE:
from math import*
n= int(input())
c=0
d=1
e=0
aux=1

while(c<n):
	e=e+(aux * (1 / (d*(3**c))))
	if(aux==1):
		aux= -1
	else:
		aux = 1
	c = c+1
	d = d+2
e = e * sqrt(12)
print(round(e,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:32:33) 
-- CODE:
from math import*
n= int(input())
c=0
d=1
e=0
aux=1

while(c<n):
	e=e+(aux * (1 / (d*(3**c))))
	if(aux==1):
		aux= -1
	else:
		aux = 1
	c = c+1
	d = d+2
e = e * sqrt(12)
print(round(e,8))
-- EXECUTION TIME:
0.176906
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
